--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/asset-clone/asset-clone.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/asset-clone/asset-clone.component.html
@@ -10,7 +10,7 @@
                 <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
-                <h4 class="modal-title">Clone {{asset?.assetName}}</h4>
+                <h4 class="modal-title">Clone Asset</h4>
             </div>
             <div class="modal-body">
                 <form role="form" class="form-horizontal">
