TM-10993 POC - Lazy Loading - Fixed View Manager not showing properly

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/index/asset-explorer-index.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/index/asset-explorer-index.component.html
@@ -70,7 +70,7 @@
 											</a>
 										</td>
 										<td>
-											<a [routerLink]="['asset','views',report.id,'show']">{{report.name}}</a>
+											<a [routerLink]="['/asset','views',report.id,'show']">{{report.name}}</a>
 										</td>
 										<td>
 											{{report.createdBy}}
