--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/task-comment/task-comment.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/task-comment/task-comment.component.html
@@ -23,11 +23,10 @@
                     <input class="form-check-input aligned-checkbox " (change)="onViewUnpublishedChange()" [(ngModel)]="viewUnpublished" id="viewUnpublishedCheckboxId" name="viewUnpublishedCheckboxId" type="checkbox" (change)="reloadTasksGrid()">
                     View Unpublished Tasks
                 </label>
-                <!-- we do not support yet Task Creation
-                <button (click)="createComment()" class="btn btn-default float-right mar-right-15 pad-top-2 btn-add" type="button">
-                    <i class="fa fa-med fa-fw fa-comment-o"></i> <span>Add</span>
+
+                <button (click)="openTaskCreate()" class="btn btn-default float-right mar-right-15 pad-top-2 btn-add" type="button" title="Add task">
+                    <i class="fa fa-med fa-fw fa-list-alt"></i> <span>Add</span>
                 </button>
-                -->
             </ng-template>
 
             <!-- Columns -->
