TM-11225 Add rules to show/hide task action buttons

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
@@ -1,4 +1,18 @@
 <!-- Main content -->
 <div>
-	<button>Task Actions</button>
+	<button *ngIf="options && options.showStart" (click)="start()" class="btn btn-default" type="button" title="Start">
+		<i class="fa fa-med fa-play-circle"></i> <span>Start</span>
+	</button>
+
+	<button  *ngIf="options && options.showDone" (click)="done()" class="btn btn-default" type="button" title="Done">
+		<i class="fa fa-med fa-check"></i> <span>Done</span>
+	</button>
+
+	<button  *ngIf="options && options.showAssignToMe" (click)="assignToMe()" class="btn btn-default" type="button" title="Assign To Me">
+		<i class="fa fa-med fa-user"></i> <span>Assign To Me</span>
+	</button>
+
+	<button  *ngIf="options && options.showNeighborhood" (click)="assignToMe()" class="btn btn-default" type="button" title="Neighborhood">
+		<i class="fa fa-med fa-align-left"></i> <span>Neighborhood</span>
+	</button>
 </div>
