--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -306,18 +306,23 @@
                 </div>
             </div>
             <div class="modal-footer form-group-center">
-                <button class="btn btn-primary pull-left" (click)="editTaskDetail()" type="button" [disabled]="!hasEditTaskPermission">
-                    <span  class="glyphicon glyphicon-pencil"></span>
-                    <span>Edit</span>
-                </button>
+                <div class="pull-left" style="display: flex;">
+                    <button class="btn btn-primary" (click)="editTaskDetail()" type="button" [disabled]="!hasEditTaskPermission">
+                        <span  class="glyphicon glyphicon-pencil"></span>
+                        <span>Edit</span>
+                    </button>
+                    <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete" [disabled]="!hasDeleteTaskPermission">
+                        <span  class="glyphicon glyphicon-trash"></span>
+                        <span>Delete</span>
+                    </button>
+                    <tds-task-actions [options]="getShowTaskActionsOptions()"></tds-task-actions>
+                </div>
+
                 <button (click)="cancelCloseDialog()" type="button" class="btn btn-default component-action-cancel pull-right">
                     <span class="glyphicon glyphicon-ban-circle"></span>
                     <span>Close</span>
                 </button>
-                <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete" [disabled]="!hasDeleteTaskPermission">
-                    <span  class="glyphicon glyphicon-trash"></span>
-                    <span>Delete</span>
-                </button>
+
             </div>
         </div>
     </div>
