--- a/web-app/tds/web-app/css/page/index.sass
+++ b/web-app/tds/web-app/css/page/index.sass
@@ -30,4 +30,5 @@
 @import "module/importBatch/import-assets.component"
 @import "module/importBatch/field-reference-popup.component"
 @import "module/assetTags/tag-list.component"
+@import "module/taskManager/task-actions.component"
 
