--- a/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
@@ -1,6 +1,6 @@
 <!-- Main content -->
-<div>
-	<button *ngIf="options && options.showStart" (click)="start()" class="btn btn-default" type="button" title="Start">
+<div class="task-actions-component">
+	<button *ngIf="options && options.showStart" (click)="onStart()" class="btn btn-default" type="button" title="Start">
 		<i class="fa fa-med fa-play-circle"></i> <span>Start</span>
 	</button>
 
