TM-11225 Implement change task status to done

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -313,6 +313,7 @@
                     </button>
                     <tds-task-actions
                             (start)="onStartTask()"
+                            (done)="onDoneTask()"
                             [options]="getShowTaskActionsOptions()"
                     ></tds-task-actions>
                 </div>
