--- a/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
@@ -4,7 +4,7 @@
 		<i class="fa fa-med fa-play-circle"></i> <span>Start</span>
 	</button>
 
-	<button  *ngIf="options && options.showDone" (click)="done()" class="btn btn-default" type="button" title="Done">
+	<button  *ngIf="options && options.showDone" (click)="onDone()" class="btn btn-default" type="button" title="Done">
 		<i class="fa fa-med fa-check"></i> <span>Done</span>
 	</button>
 
