--- a/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
@@ -12,7 +12,7 @@
 		<i class="fa fa-med fa-user"></i> <span>Assign To Me</span>
 	</button>
 
-	<button  *ngIf="options && options.showNeighborhood" (click)="assignToMe()" class="btn btn-default" type="button" title="Neighborhood">
+	<button  *ngIf="options && options.showNeighborhood" (click)="onNeighborhood()" class="btn btn-default" type="button" title="Neighborhood">
 		<i class="fa fa-med fa-align-left"></i> <span>Neighborhood</span>
 	</button>
 </div>
