--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -314,6 +314,7 @@
                     <tds-task-actions
                             (start)="onStartTask()"
                             (done)="onDoneTask()"
+                            (assignToMe)="onAssignToMe()"
                             (neighborhood)="onNeighborhood()"
                             [options]="getShowTaskActionsOptions()"
                     ></tds-task-actions>
