--- a/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
@@ -8,7 +8,7 @@
 		<i class="fa fa-med fa-check"></i> <span>Done</span>
 	</button>
 
-	<button  *ngIf="options && options.showAssignToMe" (click)="assignToMe()" class="btn btn-default" type="button" title="Assign To Me">
+	<button  *ngIf="options && options.showAssignToMe" (click)="onAssignToMe()" class="btn btn-default" type="button" title="Assign To Me">
 		<i class="fa fa-med fa-user"></i> <span>Assign To Me</span>
 	</button>
 
