TM-8476 - Modified Dependency Analyzer dependency controls to be more intuitive.

--- a/web-app/css/elements/general/graph.sass
+++ b/web-app/css/elements/general/graph.sass
@@ -204,6 +204,9 @@ div.graphContainer
         display: block
       &:not(.openPanel)
         display: none
+      .hasChanges
+        background-color: green
+        color: white
     div#controlPanelId
       min-width: 150px
       *
