--- a/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/task-actions/task-actions.component.html
@@ -15,4 +15,8 @@
 	<button  *ngIf="options && options.showNeighborhood" (click)="onNeighborhood()" class="btn btn-default" type="button" title="Neighborhood">
 		<i class="fa fa-med fa-align-left"></i> <span>Neighborhood</span>
 	</button>
+
+	<button  *ngIf="options && options.invoke" (click)="onInvoke()" class="btn btn-default" type="button" title="Invoke">
+		<i class="fa fa-med fa-cogs"></i> <span>Invoke</span>
+	</button>
 </div>
