TM-12560 TM-12551 was fixed the validation issue for name asset and custom field on create view

--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -11,6 +11,11 @@
     padding: 0
     .required-field
       color: $color-message-error--red
+    .top-align-field
+      vertical-align: top
+    .top-space-required-field
+      display: block
+      margin-top: 5px
   .prop
     padding: 5px
   .prop .name
