--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -448,11 +448,11 @@
             <div class="modal-footer form-group-center">
                 <button class="btn btn-primary pull-left"
                         [disabled]="isFormInvalid() || !hasEditTaskPermission" (click)="onCreate()" type="button">
-                    <span  class="fa fa-fw fa-floppy-o"></span>
+                    <i  class="fa fa-fw fa-floppy-o"></i>
                     <span>Update</span>
                 </button>
                 <button (click)="cancelCloseDialog()" type="button" class="btn btn-default component-action-cancel pull-right">
-                    <span class="glyphicon glyphicon-ban-circle"></span>
+                    <i class="glyphicon glyphicon-ban-circle action-button"></i>
                     <span>Cancel</span>
                 </button>
             </div>
