--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -493,15 +493,15 @@
             <div class="modal-footer form-group-center">
 	            <button class="btn btn-primary pull-left"
                         [disabled]="isFormInvalid() || !hasEditTaskPermission" (click)="onSave()" type="button">
-		            <span  class="fa fa-fw fa-floppy-o"></span>
+		            <i  class="fa fa-fw fa-floppy-o"></i>
 		            <span>Update</span>
 	            </button>
                 <button (click)="cancelCloseDialog()" type="button" class="btn btn-default component-action-cancel pull-right">
-                    <span class="glyphicon glyphicon-ban-circle"></span>
+                    <i class="glyphicon glyphicon-ban-circle action-button"></i>
                     <span>Cancel</span>
                 </button>
                 <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete" [disabled]="!hasDeleteTaskPermission">
-                    <span  class="glyphicon glyphicon-trash"></span>
+                    <i  class="glyphicon glyphicon-trash action-button"></i>
                     <span>Delete</span>
                 </button>
             </div>
