--- a/web-app/tds/web-app/app-js/modules/importBatch/components/import-assets/import-assets.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/import-assets/import-assets.component.html
@@ -145,7 +145,7 @@
                                                'fa-thumbs-down red': importResult?.status === 'error'}"></i>
                                <span>{{'IMPORT_ASSETS.MANUAL_IMPORT.IMPORT' | translate}}</span>
                            </button>
-                           <a uiSref="{{IMPORT_BATCH_STATES.IMPORT_BATCH_LIST.name}}" class="control-label col-sm-{{uiConfig.urlColSize}}">
+                           <a [routerLink]="['/importbatch','list']" class="control-label col-sm-{{uiConfig.urlColSize}}">
                                {{'IMPORT_ASSETS.MANUAL_IMPORT.GOTO_MANAGE_ASSET_BATCHES' | translate}}
                            </a>
                         </div>
