TM-11225 Increase width of Person List

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -47,6 +47,7 @@
                                                         [data]="model.personList"
                                                         [textField]="'text'"
                                                         [valueField]="'id'"
+                                                        [popupSettings]="{width: 300}"
                                                         [(ngModel)]="model.assignedTo">
                                                 </kendo-dropdownlist>
                                             </td>
