--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -50,6 +50,7 @@
                                                                 [data]="model.personList"
                                                                 [textField]="'text'"
                                                                 [valueField]="'id'"
+                                                                [popupSettings]="{width: 300}"
                                                                 [(ngModel)]="model.assignedTo">
                                                         </kendo-dropdownlist>
                                                     </td>
