TM-12379 - Work in progress

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -43,7 +43,7 @@
 					</li>
 				</ul>
 			</div>
-			<tds-bulk-change-button [bulkItems]="bulkItems"
+			<tds-bulk-change-button [bulkData]="bulkData"
 			                        [enabled]="hasSelectedItems()"
 									(clickBulk)="onClickBulkButton()"
 			                        (operationResult)="onBulkOperationResult($event)"></tds-bulk-change-button>
