TM-12625 Fix window titles
For Create and Edit vies

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -10,7 +10,7 @@
                 <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
-                <h4 class="modal-title">Edit: {{model.title}}</h4>
+                <h4 class="modal-title">Task Edit</h4>
             </div>
             <div class="modal-body">
                 <form #taskEditCreateForm="ngForm" class="full-height">
