--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -10,7 +10,7 @@
                 <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
-                <h4 class="modal-title">{{model.title}}</h4>
+                <h4 class="modal-title">Task Create</h4>
             </div>
             <div class="modal-body">
                 <form #taskEditCreateForm="ngForm" class="full-height create-form">
