--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -6,6 +6,7 @@
   border: 0;
   display: inline-flex
   outline-style: none
+  max-height: 27px!important;
   span.k-dropdown-wrap
     background: inherit
     color: inherit
@@ -88,6 +89,9 @@
         kendo-grid.successor-predecessor-table
           .k-grid-content tr td
             font-weight: normal
+            padding-top: 0!important
+            padding-bottom: 0!important
+            padding-left: 8px
         .error-message,
         .error-missing-field
           color: $color-message-error--red
@@ -123,6 +127,7 @@
           @include combo-status
           span input
             padding-top: 1px
+            padding-left: 5px
           span.k-i-close
             display: block
             color: inherit
