TM-11225 Attending PR 1872 comments

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -91,7 +91,11 @@
             font-weight: normal
             padding-top: 0!important
             padding-bottom: 0!important
-            padding-left: 8px
+        kendo-grid.successor-predecessor-table.dependency-tasks
+          .k-grid-content tr
+            td:nth-child(1),
+            td:nth-child(2)
+              padding-left: 10px
         .error-message,
         .error-missing-field
           color: $color-message-error--red
