--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -345,7 +345,7 @@
                                         <td valign="top">
                                             <kendo-grid
                                                     *ngIf="dataGridTaskPredecessorsHelper && modelHelper"
-                                                    class="successor-predecessor-table has-duplicated-predecessors"
+                                                    class="successor-predecessor-table has-duplicated-predecessors dependency-tasks"
                                                     [data]="dataGridTaskPredecessorsHelper.gridData"
                                                     [sort]="dataGridTaskPredecessorsHelper.state.sort"
                                                     [sortable]="{mode:'single'}"
@@ -392,7 +392,7 @@
                                         <td valign="top">
                                             <kendo-grid
                                                     *ngIf="dataGridTaskSuccessorsHelper && modelHelper"
-                                                    class="successor-predecessor-table has-duplicated-successors"
+                                                    class="successor-predecessor-table has-duplicated-successors dependency-tasks"
                                                     [data]="dataGridTaskSuccessorsHelper.gridData"
                                                     [sort]="dataGridTaskSuccessorsHelper.state.sort"
                                                     [sortable]="{mode:'single'}"
