--- a/web-app/tds/web-app/app-js/modules/credential/components/list/credential-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/credential/components/list/credential-list.component.html
@@ -19,7 +19,7 @@
 						(cellClick)="cellClick($event)"
 						[selectable]="true">
 					<ng-template kendoGridToolbarTemplate [position]="'top'">
-						<button class="btn btn-default" id="btnCreate" type="button" (click)="onCreate()" *ngIf="isCreateAvailable()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> {{ 'DATA_INGESTION.CREATE_CREDENTIAL' | translate }}</button>
+						<button class="btn btn-default" id="btnCreate" type="button" (click)="onCreate()" *ngIf="isCreateAvailable()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> {{ 'CREDENTIAL.CREATE_CREDENTIAL' | translate }}</button>
 						<div (click)="reloadData()" class="kendo-grid-toolbar__refresh-btn"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
 					</ng-template>
 					<kendo-grid-column *ngFor="let column of credentialColumnModel.columns" field="{{column.property}}" format="{{column.format}}" [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
