--- a/web-app/tds/web-app/app-js/modules/provider/components/list/provider-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/provider/components/list/provider-list.component.html
@@ -19,7 +19,7 @@
 						(cellClick)="cellClick($event)"
 						[selectable]="true">
 					<ng-template kendoGridToolbarTemplate [position]="'top'">
-						<button class="btn btn-default" id="btnCreateProvider" type="button" (click)="onCreateProvider()"><span class="glyphicon glyphicon-plus button-create-provider" aria-hidden="true"></span> {{ 'PROVIDERS.CREATE_PROVIDER' | translate }}</button>
+						<button class="btn btn-default" id="btnCreateProvider" type="button" (click)="onCreateProvider()"><span class="glyphicon glyphicon-plus button-create-provider" aria-hidden="true"></span> {{ 'PROVIDER.CREATE_PROVIDER' | translate }}</button>
 						<div (click)="reloadData()" class="kendo-grid-toolbar__refresh-btn"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
 					</ng-template>
 					<kendo-grid-column *ngFor="let column of providerColumnModel.columns" field="{{column.property}}" format="{{column.format}}" [locked]="column.locked" [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
