--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -91,7 +91,7 @@
 	</kendo-grid-column>
 
 	<!-- Action -->
-	<kendo-grid-command-column [width]="150" [locked]="true" >
+	<kendo-grid-command-column [width]="200" [locked]="true" >
 		<ng-template kendoGridHeaderTemplate>
 			<div class="text-center">
 				<label class="action-header"> {{ 'GLOBAL.ACTION' | translate }} </label>
@@ -103,6 +103,15 @@
 						title="Edit Asset"
 						(click)="showAssetEditView(dataItem, rowIndex)">
 					<span class="fa fa-fw fa-edit"></span>
+				</button>
+				<button class="btn btn-action btn-default" *ngIf="dataItem?.taskAndCommentFlags?.issue"
+						title="Create Task or Show Tasks"
+						(click)="showTask(dataItem, rowIndex)">
+					<span class="fa fa-fw fa-list-alt"></span>
+				</button>
+				<button class="btn btn-action btn-default" *ngIf="!dataItem?.taskAndCommentFlags?.issue"
+						title="Create Task or Show Tasks">
+					<span class="fa fa-fw fa-file-text-o"></span>
 				</button>
 				<button class="btn btn-action btn-default" *ngIf="dataItem?.taskAndCommentFlags?.comment"
 						title="Create Comment or Show Comments"
